# biped-evolve-resource

./: .gitignore  CMakeLists.txt  README.md  biped.ne  bipedgen.ne  bipedstartgenes
include/: alps.h  biped.h  biped_py.h  datarec.h  experiments.h  gene.h  genome.h  graph.h  innovation.h  link.h  neat.h  neatmain.h  network.h  nnode.h  noveltyset.h  organism.h  population.h  population_state.h  read_data.h  resource_map.h  species.h  trait.h
src/: biped_stuff.cpp  calc_evol.cpp  gene.cpp  genome.cpp  histogram.cpp  innovation.cpp  link.cpp  neat.cpp  neatmain.cpp  network.cpp  nnode.cpp  noveltyexp.cpp  noveltyset.cpp  organism.cpp  population.cpp  resource_map.cpp  species.cpp  trait.cpp
